<resources>
    <string name="app_name">ToDo</string>
    <string name="hint_user_name">Tên tài khoản</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_enter_password">Nhập lại mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="label_sign_up">Hoặc</string>
    <string name="sign_up">Đăng ký</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="enter_to_password">Bạn chưa nhập mật khẩu!</string>
    <string name="message_password_wrong">Mật khẩu không chính xác !</string>
    <string name="message_enter_password_wrong">Mật khẩu nhập lại không chính xác !</string>
    <string name="message_blank_data">Vui lòng nhập đầy đủ các trường!</string>
    <string name="message_login_un_success">Email hoặc mật khẩu không chính xác!</string>
    <string name="message_login_error">Đăng nhập thất bại!</string>
    <string name="message_email_not_validate">Email không hợp lệ!</string>
    <string name="image_logo">Image logo</string>
    <string name="text_welcome">Xin chào</string>
    <string name="text_sign_in">Đăng nhập để tiếp tục</string>
    <string name="hint_first_name">Firstname</string>
    <string name="hint_last_name">LastName</string>
    <string name="label_birth_day">Ngày sinh</string>
    <string name="label_first_name">First Name</string>
    <string name="label_email">Email</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_gender">Giới tính</string>
    <string name="label_add_task">Thêm ghi chú</string>
    <string name="label_list_task">Danh sách ghi chú</string>
    <string name="label_profile_user">Thông tin cá nhân</string>
    <string name="label_select_datetime">Chọn thời gian:</string>
    <string name="title_home">Task</string>
    <string name="title_user">User</string>
    <string name="text_sign_out">Đăng xuất</string>
    <string name="text_change_password">Đổi mật khẩu</string>
    <string name="text_confirm_change_infor">Lưu thay đổi</string>
    <string name="text_cancel_change_infor">Hủy</string>
    <string name="text_change_information">Thay đổi thông tin</string>
    <string name="text_male">Nam</string>
    <string name="text_female">Nữ</string>
    <string name="text_cancel_sign_up"><u>Hủy đăng ký!</u></string>
    <string name="text_add_task">Thêm</string>
    <string name="hint_input_title">Nhập tiêu đề</string>
    <string name="hint_input_content">Nhập nội dung</string>
    <string name="text_remember_me">Nhắc tôi</string>
</resources>